clusters/cluster1/kubernetes/apps/biggs/krops-web/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: krops-web-service
  namespace: biggs
spec:
  type: ClusterIP
  selector:
    app: krops-web
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
