clusters/cluster1/kubernetes/apps/biggs/krops-web/app/krops-web-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: krops-web
  namespace: biggs
spec:
  hostnames:
    - krops.biggs.dog
  parentRefs:
    - name: wildcard-biggs-dog
      namespace: networking
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: krops-web-service
          port: 8080
